handle pagination and the infinite scrolling